--- a/styles/logic.css
+++ b/styles/logic.css
@@ -308,113 +308,46 @@
   margin-left: -0.125rem;
   margin-top: -0.125rem;
 }
-.OnContent.Gate.OR span:before,
-.OnContent.Gate.XOR span:before,
-.OnContent.Gate.OR:after,
-.OnContent.Gate.XOR:after,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate.Gate.OR span:before,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate.Gate.XOR span:before,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate.Gate.OR:after,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate.Gate.XOR:after,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate.Gate.OR span:before,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate.Gate.XOR span:before,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate.Gate.OR:after,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate.Gate.XOR:after,
-#simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-gate.Gate.OR span:before,
-#simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-gate.Gate.XOR span:before,
-#simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-gate.Gate.OR:after,
-#simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-gate.Gate.XOR:after,
-#simple-or-a:checked ~ #simple-or-gate.Gate.OR span:before,
-#simple-or-a:checked ~ #simple-or-gate.Gate.XOR span:before,
-#simple-or-a:checked ~ #simple-or-gate.Gate.OR:after,
-#simple-or-a:checked ~ #simple-or-gate.Gate.XOR:after,
-#simple-or-b:checked ~ #simple-or-gate.Gate.OR span:before,
-#simple-or-b:checked ~ #simple-or-gate.Gate.XOR span:before,
-#simple-or-b:checked ~ #simple-or-gate.Gate.OR:after,
-#simple-or-b:checked ~ #simple-or-gate.Gate.XOR:after,
-#half-adder-a:not(:checked) ~ #half-adder-b:checked ~ #half-adder-xor-gate.Gate.OR span:before,
-#half-adder-a:not(:checked) ~ #half-adder-b:checked ~ #half-adder-xor-gate.Gate.XOR span:before,
-#half-adder-a:not(:checked) ~ #half-adder-b:checked ~ #half-adder-xor-gate.Gate.OR:after,
-#half-adder-a:not(:checked) ~ #half-adder-b:checked ~ #half-adder-xor-gate.Gate.XOR:after,
-#half-adder-a:checked ~ #half-adder-b:not(:checked) ~ #half-adder-xor-gate.Gate.OR span:before,
-#half-adder-a:checked ~ #half-adder-b:not(:checked) ~ #half-adder-xor-gate.Gate.XOR span:before,
-#half-adder-a:checked ~ #half-adder-b:not(:checked) ~ #half-adder-xor-gate.Gate.OR:after,
-#half-adder-a:checked ~ #half-adder-b:not(:checked) ~ #half-adder-xor-gate.Gate.XOR:after,
-#half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate.Gate.OR span:before,
-#half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate.Gate.XOR span:before,
-#half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate.Gate.OR:after,
-#half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate.Gate.XOR:after,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input.Gate.OR span:before,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input.Gate.XOR span:before,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input.Gate.OR:after,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input.Gate.XOR:after,
-#full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-input.Gate.OR span:before,
-#full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-input.Gate.XOR span:before,
-#full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-input.Gate.OR:after,
-#full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-input.Gate.XOR:after,
-#full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-input.Gate.OR span:before,
-#full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-input.Gate.XOR span:before,
-#full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-input.Gate.OR:after,
-#full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-input.Gate.XOR:after,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-and-gate-sum.Gate.OR span:before,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-and-gate-sum.Gate.XOR span:before,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-and-gate-sum.Gate.OR:after,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-and-gate-sum.Gate.XOR:after,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-and-gate-sum.Gate.OR span:before,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-and-gate-sum.Gate.XOR span:before,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-and-gate-sum.Gate.OR:after,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-and-gate-sum.Gate.XOR:after,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out.Gate.OR span:before,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out.Gate.XOR span:before,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out.Gate.OR:after,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out.Gate.XOR:after,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out.Gate.OR span:before,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out.Gate.XOR span:before,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out.Gate.OR:after,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out.Gate.XOR:after,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out.Gate.OR span:before,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out.Gate.XOR span:before,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out.Gate.OR:after,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out.Gate.XOR:after,
-#full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry.Gate.OR span:before,
-#full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry.Gate.XOR span:before,
-#full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry.Gate.OR:after,
-#full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry.Gate.XOR:after,
-#full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry.Gate.OR span:before,
-#full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry.Gate.XOR span:before,
-#full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry.Gate.OR:after,
-#full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry.Gate.XOR:after,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry.Gate.OR span:before,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry.Gate.XOR span:before,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry.Gate.OR:after,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry.Gate.XOR:after,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry.Gate.OR span:before,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry.Gate.XOR span:before,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry.Gate.OR:after,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry.Gate.XOR:after {
+.ActiveGate.OR span:before,
+.ActiveGate.OR:after,
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate span:before,
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate:after,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate span:before,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate:after,
+#simple-or-a:checked ~ #simple-or-gate span:before,
+#simple-or-a:checked ~ #simple-or-gate:after,
+#simple-or-b:checked ~ #simple-or-gate span:before,
+#simple-or-b:checked ~ #simple-or-gate:after,
+#half-adder-a:not(:checked) ~ #half-adder-b:checked ~ #half-adder-xor-gate span:before,
+#half-adder-a:not(:checked) ~ #half-adder-b:checked ~ #half-adder-xor-gate:after,
+#half-adder-a:checked ~ #half-adder-b:not(:checked) ~ #half-adder-xor-gate span:before,
+#half-adder-a:checked ~ #half-adder-b:not(:checked) ~ #half-adder-xor-gate:after,
+#full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-input span:before,
+#full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-input:after,
+#full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-input span:before,
+#full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-input:after,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out span:before,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out:after,
+#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out span:before,
+#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out:after,
+#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out span:before,
+#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out:after,
+#full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry span:before,
+#full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry:after,
+#full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry span:before,
+#full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry:after,
+#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry span:before,
+#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry:after,
+#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry span:before,
+#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry:after {
   background-color: #ffc107;
 }
-.OnContent.Gate.AND,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate.Gate.AND,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate.Gate.AND,
-#simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-gate.Gate.AND,
-#simple-or-a:checked ~ #simple-or-gate.Gate.AND,
-#simple-or-b:checked ~ #simple-or-gate.Gate.AND,
-#half-adder-a:not(:checked) ~ #half-adder-b:checked ~ #half-adder-xor-gate.Gate.AND,
-#half-adder-a:checked ~ #half-adder-b:not(:checked) ~ #half-adder-xor-gate.Gate.AND,
-#half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate.Gate.AND,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input.Gate.AND,
-#full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-input.Gate.AND,
-#full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-input.Gate.AND,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-and-gate-sum.Gate.AND,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-and-gate-sum.Gate.AND,
-#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out.Gate.AND,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-or-gate-carry-out.Gate.AND,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-or-gate-carry-out.Gate.AND,
-#full-adder-carry:not(:checked) ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry.Gate.AND,
-#full-adder-carry:not(:checked) ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry.Gate.AND,
-#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:not(:checked) ~ #full-adder-xor-gate-carry.Gate.AND,
-#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-xor-gate-carry.Gate.AND {
+.ActiveGate.AND,
+#simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-gate,
+#half-adder-a:checked ~ #half-adder-b:checked ~ #half-adder-and-gate,
+#full-adder-a:checked ~ #full-adder-b:checked ~ #full-adder-and-gate-input,
+#full-adder-carry:checked ~ #full-adder-a:not(:checked) ~ #full-adder-b:checked ~ #full-adder-and-gate-sum,
+#full-adder-carry:checked ~ #full-adder-a:checked ~ #full-adder-b:not(:checked) ~ #full-adder-and-gate-sum {
   background-color: #ffc107;
 }
 .OnContent + .Connector,
