--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -373,7 +373,8 @@
 }
 .ActiveGate.Connectors {
 	.ColorizeConnectors(@activeColor);
-	// Colorize any result connected to the gate.
+}
+.ActiveGate.Result {
 	.ConnectorsFor({
 		+ .Result {
 			background-color: @activeColor;
@@ -540,11 +541,46 @@
 	}
 }
 
-.coloredOp(@first, @operation, @second, @result) {
+// These mixins call .op() and pass a result selector 
+// that colorizes the gate with the given ID, as well
+// as the following connectors & result. They'll also 
+// colorize results of intermediate chained selectors
+// (you must pass a result ID when chaining as well).
+// If the same operation is used more than once, pass
+// none as the result of the second one to prevent an
+// extra selector set.
+
+// This is called for the outermost layer.
+.coloredOp(@first, @operation, @second, @result, @isFinal: true) when (@operation = and), (@operation = xor), (@operation = or) {
 	@combinatedResult: %(~'~ #%s', @result);
+	#private.callProbe(@first);
+	#private.callProbe(@second);
 	.op(@first, @operation, @second, {
 		@{combinatedResult}:extend(.ActiveGate.Connectors all) { }
+		@{combinatedResult}:extend(.ActiveGate.Result all) when (@isFinal) { }
 		@{combinatedResult}:extend(.ActiveGate.AND all) when (@operation = and) {}
 		@{combinatedResult}:extend(.ActiveGate.OR all) when (@operation = or), (@operation = xor) {}
 	});
+}
+
+// This is called for chained selectors.
+// The first overload will be invoked by
+// the outer layer to colorize this part
+// of the chain.  The second overload is
+// invoked by normal chaining and simply
+// passes through to the actual .op(). I
+// reuse the @c parameter passthrough to
+// disambiguate.
+.coloredOp(@mode, @first, @operation, @second, @result) when (@mode = probe) and not (@result = none) {
+	.coloredOp(@first, @operation, @second, @result, false);
+}
+.coloredOp(@mode, @first, @operation, @second, @result) when (@mode = true), (@mode = false) {
+	.op(@mode, @first, @operation, @second);
+}
+
+#private {
+	.callProbe(@operand) when not (iskeyword(@operand)) and not (isstring(@operand)) {
+		@operand();
+		.c(probe);
+	}
 }
