Restore missing selector

--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -119,7 +119,7 @@
 
 	.ValueContent();
 	&:checked {
-		&:extend(ActiveValueContent all);
+		&:extend(.ActiveValueContent all);
 		&:extend(.Connectors.Active all);
 	}
 
