--- a/styles/layout.css
+++ b/styles/layout.css
@@ -66,7 +66,8 @@ nav > a:target:before {
   -webkit-transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0.4s cubic-bezier(0.4, 0, 0.2, 1);
           transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
-nav > section {
+nav > section,
+nav > a:target ~ section.DefaultTab {
   position: absolute;
   top: 64px;
   bottom: 0;
@@ -96,7 +97,8 @@ nav > section {
           transition: margin-left 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s;
   margin-left: -96px;
 }
-nav > section > * {
+nav > section > *,
+nav > a:target ~ section.DefaultTab > * {
   -webkit-flex-shrink: 0;
       -ms-flex-negative: 0;
           flex-shrink: 0;
@@ -104,7 +106,8 @@ nav > section > * {
 nav > a:target + section ~ section {
   margin-left: 96px;
 }
-nav > a:target + section {
+nav > a:target + section,
+nav section.DefaultTab {
   pointer-events: auto;
   opacity: 1;
   margin: 0;
@@ -125,5 +128,22 @@ ul.CanvasList li {
   text-align: center;
   display: block;
   margin: 0 48px 48px 0;
+}
+h1 {
+  font-weight: normal;
+  font-size: 40px;
+  margin-bottom: 0;
+}
+h2 {
+  font-weight: normal;
+  font-style: italic;
+  font-size: 20px;
+  margin-top: 0;
+}
+h1,
+h2,
+p {
+  width: 90%;
+  max-width: 600px;
 }
 /*# sourceMappingURL=layout.css.map */
