--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -45,6 +45,11 @@
 	box-sizing: border-box;
 }
 
+@media (max-width: 480px) {
+	:root {
+		font-size: 8px;
+	}
+}
 
 // Draws a box around a value (input or computed result).  The caller 
 // must apply background-color: @activeColor when the value is active
@@ -158,7 +163,7 @@
 		content: '';
 		display: block;
 		background-color: @background;
-		border: 2px solid #FFB74D;
+		border: @borderThickness solid #FFB74D;
 		position: absolute;
 		top: -@padding;
 		left: -@padding;
@@ -372,7 +377,7 @@
 }
 
 .GateLabel() {
-	font-size: 21px;
+	font-size: 1.4rem;
 	text-align: center;
 }
 
