--- a/styles/layout.less
+++ b/styles/layout.less
@@ -149,11 +149,17 @@ h1 {
 
 h2 {
 	font-weight: normal;
-	font-style: italic;
 	font-size: 20px;
 	margin-top: 0;
+}
+h1 + h2 {
+	font-style: italic;
 }
 h1, h2, p {
 	width: 100%;	// Stretch on mobile, but center the entire box on larger screens
 	max-width: 600px;
+}
+
+p + .Canvas {
+	margin-top: 3rem;
 }
