--- a/styles/logic.css
+++ b/styles/logic.css
@@ -190,6 +190,13 @@
   border-left: 0.125rem solid #ffa000;
   padding-right: 0.125rem;
 }
+.Connector.Vertical.Corner.Bottom:before {
+  top: auto;
+  bottom: -0.375rem;
+  left: -0.125rem;
+  border-bottom: 0.125rem solid #ffa000;
+  border-top: none;
+}
 .Connector.Vertical.Convex {
   overflow: hidden;
   background: none !important;
@@ -231,6 +238,18 @@
 .Connector.Vertical.Convex.Right:after {
   left: 0;
   border-left: 0.125rem solid #ffa000;
+}
+.Connector.Vertical.Junction.Top:before {
+  content: '';
+  display: block;
+  background: #e0e0e0;
+  -webkit-transition: inherit;
+          transition: inherit;
+  position: absolute;
+  top: 0;
+  right: -0.125rem;
+  width: 0.75rem;
+  height: 0.25rem;
 }
 .Connector.Horizontal {
   height: 0.5rem;
